--- a/index.html
+++ b/index.html
@@ -43,7 +43,14 @@
           </ul>
         </div>
         <div class="button">
-          <a href="#"><img src="img/button (1).png" alt="button" /></a>
+          <input
+            type="image"
+            src="img/button (1).png"
+            name="submit"
+            width="210"
+            height="78"
+            alt="submit"
+          />
         </div>
       </div>
       <div class="landing">
@@ -54,7 +61,14 @@
             beyond flavor.
           </p>
           <div class="button">
-            <a href="#"><img src="img/Group 219.png" alt="" /></a>
+            <input
+              type="image"
+              src="img/Group 219.png"
+              name="submit"
+              width="171"
+              height="63"
+              alt="submit"
+            />
           </div>
           <div class="vector2">
             <img src="img/Vector2.png" alt="double circul" />
@@ -79,7 +93,14 @@
             <h6>Experience Al Balad old town of Jeddah vibes.</h6>
           </div>
           <div class="button">
-            <a href="#"><img src="img/Group 228 (1).png" /></a>
+            <input
+              type="image"
+              src="img/Group 228 (1).png"
+              name="submit"
+              width="177.25"
+              height="69.62"
+              alt="submit"
+            />
           </div>
           <div class="row">
             <div class="column">
@@ -95,6 +116,7 @@
               <img src="img/Vector (3).png" />
             </div>
           </div>
+
           <hr />
         </div>
       </div>
@@ -124,6 +146,7 @@
         <img src="img/Group.svg" />
       </div>
     </div>
+    
     <!--4d page-->
     <div class="container4">
       <div class="topangle">
@@ -140,8 +163,15 @@
       <div class="text3">
         <p>A unique menu that reflects the true essence of the Saudi cuisine</p>
       </div>
-      <div class="buton">
-        <a a href="#"><img src="image/Group 220.png" /></a>
+      <div class="button">
+        <input
+          type="image"
+          src="image/Group 220.png"
+          name="submit"
+          width="177.25"
+          height="69.62"
+          alt="submit"
+        />
       </div>
       <div class="bottomangle">
         <div class="vector strocke">
